--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
     <main>
         <section class="flex-c">
             <article class="midia-text">
-                <div class="midia01">
+                <div class="text01">
                     <h2>midia>text</h2>
 
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae architecto, eaque soluta quibusdam deleniti ea qui asperiores voluptatem blanditiis, voluptatum expedita nesciunt autem enim, nam earum rerum quasi ipsam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quos, doloribus et rem dicta dolorem labore quam ducimus veritatis tenetur, commodi odio perferendis ratione molestiae ipsum ea ipsa nobis corporis?</p>
 
                 </div>
-                <div class="midia">
+                <div class="midia01">
                     <img src="imagens/kobe-t.png" alt="kobe-braynt">
                 </div>
             </article>
             <article class="text-midia">
-                 <div class="text">
+                 <div class="text01">
                       <h2>text-midia</h2>
 
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae architecto, eaque soluta quibusdam deleniti ea qui asperiores voluptatem blanditiis, voluptatum expedita nesciunt autem enim, nam earum rerum quasi ipsam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quos, doloribus et rem dicta dolorem labore quam ducimus veritatis tenetur, commodi odio perferendis ratione molestiae ipsum ea ipsa nobis corporis?</p>
                 </div>
-                <div class="midia">
+                <div class="midia01">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/ulVYG4nJWFU?si=KnPVcet27IsZuJWY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </article>
