--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1><img src="imagens/Lakers-Logo-PNG-Photo-Image.png" alt=""></h1>
+        <h1><img src="imagens/Lakers-Logo-PNG-Photo-Image.png" alt="" id="imgk"></h1>
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda voluptatibus veritatis reiciendis quidem tempore obcaecati quod quae nostrum repellendus! Consectetur perferendis quaerat similique molestias voluptate officiis. Laudantium inventore nulla delectus!
         </p>
@@ -34,7 +34,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae architecto, eaque soluta quibusdam deleniti ea qui asperiores voluptatem blanditiis, voluptatum expedita nesciunt autem enim, nam earum rerum quasi ipsam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quos, doloribus et rem dicta dolorem labore quam ducimus veritatis tenetur, commodi odio perferendis ratione molestiae ipsum ea ipsa nobis corporis?</p>
                 </div>
                 <div class="midia01">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ulVYG4nJWFU?si=KnPVcet27IsZuJWY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ulVYG4nJWFU?si=KnPVcet27IsZuJWY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen id="ivideo"></iframe>
                 </div>
             </article>
 
